2015-01-26  Richard Frith-Macdonald <rfm@gnu.org>
        * GNUmakefile.preamble: fixup gcc flag filtering
        * EcClientI.h:
        * EcClientI.m:
        * EcCommand.m:
        * EcControl.m:
        * EcProcess.h:
        * EcProcess.m:
        Implement forced kill by -terminate method if a client fails to
        close down gracefully within 30 seconds.

2015-01-19  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* GNUmakefile.preamble: Fix wrong option letter in sed command.

2015-01-15  Richard Frith-Macdonald <rfm@gnu.org>

        * EcAlarmDestination.m: When shutting down, only wait for the
	background thread first time ... otherwise we could get into a
	recursive loop calling the -shutdown method while
	waiting for shutdown to complete.

2015-01-07  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac:
	* GNUMakefile.preamble:
	Filter out fstack-protect-strong from snmp cflags because clang
	doesn't support it.

2014-11-28  Richard Frith-Macdonald <rfm@gnu.org>

	* EcAlarmSinkSNMP.m: Fix incorrect OID setup for alarm table in
	SNMP agent.

2014-11-27  Richard Frith-Macdonald <rfm@gnu.org>

	* EcUserDefaults.m: The -doubleForKey: method was commented out!
	Restore it.

2014-11-26  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.m: Make -cmdLastIP, -cmdLastOP (and their setters)
	thread-safe.

2014-11-02  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.h:
	* EcProcess.m:
	Add method to register a user default / configuration key to have
	updates for a default automatically trigger a method to handle it,
	and to provide 'help' documentation for command line arguments.
	* EcCommand.m:
	Implement 'restart' command for when we want to quit a server and
	have it start up again.

2014-11-01  Richard Frith-Macdonald <rfm@gnu.org>

	* EcProcess.m: Check for descriptor leaks at 1 minute intervals,
        and shut down if EcDescriptorsMaximum is exceeded or if the
	process runs out of descriptors.

2014-10-23  Richard Frith-Macdonald <rfm@gnu.org>
